--- a/AboutUs.css
+++ b/AboutUs.css
@@ -1,4 +1,4 @@
-﻿
+
 
 * {
     margin: 0;
@@ -499,6 +499,29 @@ p, h3 {
 .rightCol .content p {
     text-align: justify;
     margin-bottom: 1em; 
+}
+.container {
+    width: 90%;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+@media (max-width: 768px) {
+    section {
+        flex-basis: 100%; 
+    }
+
+    .top-bar {
+        padding: 10px 20px; 
+    }
+
+    .search-container {
+        max-width: 100%; 
+    }
+
+        .search-container input[type="text"] {
+            width: 80%; 
+        }
 }
 
 
