--- a/ContactUs.css
+++ b/ContactUs.css
@@ -325,3 +325,18 @@ footer.site-footer {
     text-align: center;
     margin-top
 }
+
+.responsive-image {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+
+@media (max-width: 768px) {
+    .responsive-image {
+        max-width: 90%;
+    }
+}
+
